[gd_scene load_steps=17 format=3 uid="uid://4swfeyxnrcdc"]

[ext_resource type="Script" path="res://Scripts/game_manager.gd" id="1_2x0mu"]
[ext_resource type="MeshLibrary" uid="uid://do35ns8qlqqa7" path="res://gridmapmeshes.tres" id="1_jojv3"]
[ext_resource type="Script" path="res://Scripts/gui.gd" id="4_lphpq"]
[ext_resource type="Script" path="res://Scripts/atm.gd" id="5_383wi"]
[ext_resource type="PackedScene" uid="uid://c12opxdw0hcmf" path="res://Assets/Atm/atm.glb" id="5_d04m8"]
[ext_resource type="Script" path="res://Scripts/coin.gd" id="7_n5inm"]
[ext_resource type="PackedScene" uid="uid://dj8u6cqerysu2" path="res://Assets/coin.glb" id="7_tnrk6"]
[ext_resource type="PackedScene" uid="uid://cdk6hwb4hi2wc" path="res://Assets/Player/player.tscn" id="10_yetpm"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_mefsh"]
sky_top_color = Color(0.901961, 0.807843, 0.776471, 1)
sky_horizon_color = Color(0.862745, 0.814706, 0.805882, 1)
sky_energy_multiplier = 0.7
ground_bottom_color = Color(0.54902, 0.45098, 0.447059, 1)
ground_horizon_color = Color(0.862745, 0.814706, 0.805882, 1)

[sub_resource type="Sky" id="Sky_ds74o"]
sky_material = SubResource("ProceduralSkyMaterial_mefsh")

[sub_resource type="Environment" id="Environment_is7yf"]
background_mode = 2
sky = SubResource("Sky_ds74o")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="BoxShape3D" id="BoxShape3D_px3eg"]
size = Vector3(3.38794, 5.66516, 2.44745)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1yb15"]
bg_color = Color(0.368247, 0.69521, 0.183781, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d773i"]
bg_color = Color(1, 0.343961, 0.270593, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_x7pjc"]
albedo_color = Color(1, 1, 0.196078, 1)

[sub_resource type="SphereShape3D" id="SphereShape3D_t1h2p"]
radius = 0.47285

[node name="Game" type="Node3D" node_paths=PackedStringArray("gui")]
script = ExtResource("1_2x0mu")
gui = NodePath("GUI")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_is7yf")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
light_energy = 1.3
shadow_enabled = true

[node name="GridMap" type="GridMap" parent="."]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 0, -1.59451, 0)
mesh_library = ExtResource("1_jojv3")
cell_size = Vector3(1, 1, 1)
data = {
"cells": PackedInt32Array(65535, 0, 1, 65535, 65535, 4, 0, 65535, 4, 0, 0, 3, 1, 0, 4, 2, 0, 3, 3, 0, 3, 4, 0, 3, 5, 0, 3, 6, 0, 4, 6, 65535, 3, 5, 65535, 4, 4, 65535, 3, 3, 65535, 4, 2, 65535, 4, 1, 65535, 3, 65534, 65535, 3, 65534, 65534, 3, 65534, 65533, 4, 65534, 65532, 4, 65535, 65532, 4, 65535, 65531, 3, 0, 65531, 3, 1, 65531, 4, 2, 65531, 1, 2, 65532, 4, 2, 65533, 4, 2, 65534, 3, 1, 65534, 3, 0, 65534, 4, 65535, 65534, 3, 65535, 65533, 4, 0, 65533, 3, 1, 65533, 4, 1, 65532, 3, 0, 65532, 4, 5, 1, 4, 4, 1, 3, 3, 1, 3, 2, 1, 3, 2, 2, 0, 2, 3, 4, 3, 3, 3, 3, 4, 3, 3, 5, 4, 4, 5, 4, 4, 4, 3, 5, 3, 3, 5, 2, 0, 4, 2, 2, 3, 2, 0, 4, 3, 4, 5, 4, 4, 5, 5, 3, 2, 4, 4, 65530, 65533, 4, 65530, 65534, 3, 65530, 65535, 3, 65531, 65535, 4, 65532, 65535, 3, 65532, 65534, 4, 65531, 65534, 4, 65531, 65533, 4, 65533, 65534, 3, 65533, 65535, 4, 65534, 0, 1, 65533, 0, 1, 65532, 0, 1, 65531, 0, 1, 65530, 0, 1, 65529, 0, 1, 65529, 65535, 1, 65529, 65534, 1, 65529, 65533, 1, 65532, 65532, 1, 65532, 65533, 1, 65533, 65533, 1, 65533, 65532, 1, 65533, 65531, 1, 65534, 65531, 1, 65534, 65530, 1, 65535, 65530, 1, 0, 65530, 1, 1, 65530, 1, 2, 65530, 1, 3, 65531, 1, 3, 65532, 1, 3, 65533, 1, 3, 65534, 1, 4, 65534, 1, 5, 65534, 1, 6, 65534, 1, 7, 65534, 1, 7, 65535, 1, 7, 0, 1, 7, 1, 1, 6, 1, 1, 6, 2, 1, 6, 3, 1, 6, 4, 1, 6, 5, 1, 6, 6, 1, 5, 6, 1, 4, 6, 1, 3, 6, 1, 2, 6, 1, 2, 5, 1, 1, 5, 1, 1, 4, 1, 1, 3, 1, 1, 2, 1, 1, 1, 1, 0, 1, 1, 65535, 1, 1, 65531, 65527, 4, 65530, 65527, 4, 65529, 65527, 3, 65528, 65527, 3, 65527, 65528, 3, 65526, 65528, 4, 65525, 65528, 3, 65524, 65528, 4, 65523, 65528, 4, 65522, 65528, 1, 65522, 65527, 4, 65522, 65526, 1, 65523, 65526, 4, 65524, 65526, 4, 65524, 65525, 4, 65525, 65525, 3, 65526, 65525, 4, 65526, 65526, 3, 65527, 65526, 3, 65528, 65526, 3, 65527, 65527, 3, 65526, 65527, 4, 65525, 65527, 3, 65524, 65527, 3, 65523, 65527, 3, 65525, 65526, 4, 65529, 65526, 3, 65530, 65526, 3, 65530, 65525, 4, 65529, 65525, 3, 65528, 65525, 3, 65527, 65525, 3, 65525, 65524, 1, 65526, 65524, 1, 65527, 65524, 1, 65528, 65524, 1, 65529, 65524, 1, 65530, 65524, 1, 65531, 65524, 1, 65531, 65525, 1, 65531, 65526, 3, 65532, 65526, 1, 65532, 65527, 1, 65532, 65528, 1, 65528, 65529, 1, 65527, 65529, 1, 65526, 65529, 1, 65525, 65529, 1, 65524, 65529, 1, 65523, 65529, 1, 65522, 65529, 1, 65521, 65528, 1, 65521, 65527, 1, 65521, 65526, 1, 65522, 65525, 1, 65523, 65525, 1, 65523, 65524, 1, 65524, 65524, 1, 65531, 65532, 3, 65530, 65532, 3, 65530, 65531, 3, 65531, 65531, 3, 65531, 65530, 3, 65530, 65530, 3, 65531, 65529, 3, 65530, 65529, 3, 65529, 65529, 1, 65529, 65528, 3, 65530, 65528, 3, 65531, 65528, 3, 65529, 65532, 1, 65529, 65531, 1, 65529, 65530, 1, 65528, 65528, 4, 65532, 65529, 1, 65532, 65530, 1, 65532, 65531, 1)
}
metadata/_editor_floor_ = Vector3(0, 0, 0)

[node name="Player" parent="." instance=ExtResource("10_yetpm")]
transform = Transform3D(-0.215264, 0, 0.976556, 0, 1, 0, -0.976556, 0, -0.215264, 17.4782, 0, 1.28422)

[node name="Atm" type="Area3D" parent="."]
transform = Transform3D(0.0377156, 0, 0.498576, 0, 0.5, 0, -0.498576, 0, 0.0377156, -38.3251, -0.227558, -26.5442)
script = ExtResource("5_383wi")

[node name="Model" parent="Atm" instance=ExtResource("5_d04m8")]

[node name="Collider" type="CollisionShape3D" parent="Atm"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.160034, 2.33258, 0.0889611)
shape = SubResource("BoxShape3D_px3eg")

[node name="GUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1149.0
offset_bottom = 647.0
script = ExtResource("4_lphpq")

[node name="PriceIndication" type="Label" parent="GUI"]
layout_mode = 0
offset_left = -1.0
offset_top = 3.0
offset_right = 906.0
offset_bottom = 495.0
theme_override_font_sizes/font_size = 55
text = "Current Solana Price:20.50$
"

[node name="WinScreen" type="Control" parent="GUI"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="GUI/WinScreen"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 644.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1yb15")

[node name="congrats" type="Label" parent="GUI/WinScreen"]
layout_mode = 0
offset_left = 85.0
offset_top = -22.0
offset_right = 992.0
offset_bottom = 473.0
theme_override_font_sizes/font_size = 55
text = "You win!!!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FinalPriceIndication" type="Label" parent="GUI/WinScreen"]
layout_mode = 0
offset_left = 301.0
offset_top = 409.0
offset_right = 974.0
offset_bottom = 604.0
theme_override_font_sizes/font_size = 55
text = "Final Price: 10.69$
"

[node name="LoseScreen" type="Control" parent="GUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="GUI/LoseScreen"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 644.0
theme_override_styles/panel = SubResource("StyleBoxFlat_d773i")

[node name="toobad" type="Label" parent="GUI/LoseScreen"]
layout_mode = 0
offset_left = 85.0
offset_top = -22.0
offset_right = 992.0
offset_bottom = 473.0
theme_override_font_sizes/font_size = 55
text = "Solana Dumped to zero :("
horizontal_alignment = 1
vertical_alignment = 1

[node name="ReplayButton" type="Button" parent="GUI/LoseScreen"]
layout_mode = 0
offset_left = 306.0
offset_top = 402.0
offset_right = 760.0
offset_bottom = 521.0
theme_override_font_sizes/font_size = 55
text = "Try Again Fool"

[node name="Coin" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.5462, 0.554735, 0.0410511)
script = ExtResource("7_n5inm")

[node name="Model" parent="Coin" instance=ExtResource("7_tnrk6")]

[node name="coin2" parent="Coin/Model" index="0"]
surface_material_override/0 = SubResource("StandardMaterial3D_x7pjc")

[node name="Collider" type="CollisionShape3D" parent="Coin"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.136104, 0)
shape = SubResource("SphereShape3D_t1h2p")

[node name="Coin2" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.18074, 0.554735, -12.3969)
script = ExtResource("7_n5inm")

[node name="Model" parent="Coin2" instance=ExtResource("7_tnrk6")]

[node name="coin2" parent="Coin2/Model" index="0"]
surface_material_override/0 = SubResource("StandardMaterial3D_x7pjc")

[node name="Collider" type="CollisionShape3D" parent="Coin2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.136104, 0)
shape = SubResource("SphereShape3D_t1h2p")

[node name="Coin3" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15.9332, 0.554735, -17.5088)
script = ExtResource("7_n5inm")

[node name="Model" parent="Coin3" instance=ExtResource("7_tnrk6")]

[node name="coin2" parent="Coin3/Model" index="0"]
surface_material_override/0 = SubResource("StandardMaterial3D_x7pjc")

[node name="Collider" type="CollisionShape3D" parent="Coin3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.136104, 0)
shape = SubResource("SphereShape3D_t1h2p")

[connection signal="body_entered" from="Atm" to="Atm" method="_on_body_entered"]
[connection signal="pressed" from="GUI/LoseScreen/ReplayButton" to="GUI" method="_on_replay_button_pressed"]
[connection signal="body_entered" from="Coin" to="Coin" method="_on_body_entered"]
[connection signal="body_entered" from="Coin2" to="Coin2" method="_on_body_entered"]
[connection signal="body_entered" from="Coin3" to="Coin3" method="_on_body_entered"]

[editable path="Coin/Model"]
[editable path="Coin2/Model"]
[editable path="Coin3/Model"]
